@@ -1,24 +1,36 @@
 package aniAdd.config;
 
+import org.yaml.snakeyaml.LoaderOptions;
 import org.yaml.snakeyaml.Yaml;
+import org.yaml.snakeyaml.constructor.Constructor;
+import org.yaml.snakeyaml.inspector.TagInspector;
+import org.yaml.snakeyaml.introspector.BeanAccess;
 
 import java.io.*;
+import java.lang.reflect.InvocationTargetException;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 
 /**
  * Created by Archie on 23.12.2015.
  */
-public class ConfigFileParser<T, U extends T> {
+public class ConfigFileParser<T> {
 
-    private final Class<U> mClazz;
-    private Yaml mYaml;
-    private String mConfigFilePath;
+    private final Class<T> mClazz;
+    private final Yaml mYaml;
+    private final String mConfigFilePath;
 
-    public ConfigFileParser(String configFilePath, Class<U> clazz) {
+    public ConfigFileParser(String configFilePath, Class<T> clazz) {
         mConfigFilePath = configFilePath;
-        mYaml = new Yaml();
         mClazz = clazz;
+
+        var loaderoptions = new LoaderOptions();
+        TagInspector taginspector =
+                tag -> tag.getClassName().equals(AniConfiguration.class.getName());
+        loaderoptions.setTagInspector(taginspector);
+
+        mYaml = new Yaml(new Constructor(AniConfiguration.class, loaderoptions));
+        mYaml.setBeanAccess(BeanAccess.FIELD);
     }
 
     public T loadFromFile() {
@@ -29,13 +41,13 @@ public class ConfigFileParser<T, U extends T> {
             Logger.getGlobal().log(Level.WARNING, "File not found");
         }
         if (input != null) {
-            return (T) mYaml.load(input);
+            return mYaml.loadAs(input, mClazz);
         } else {
             try {
-                return mClazz.newInstance();
-            } catch (InstantiationException e) {
-                e.printStackTrace();
-            } catch (IllegalAccessException e) {
+                Logger.getGlobal().log(Level.WARNING, "Using default configuration");
+                return mClazz.getDeclaredConstructor().newInstance();
+            } catch (InstantiationException | IllegalAccessException | NoSuchMethodException |
+                     InvocationTargetException e) {
                 e.printStackTrace();
             }
             return null;
@@ -49,7 +61,7 @@ public class ConfigFileParser<T, U extends T> {
     public void saveToFile(T configuration, String path) throws IOException {
         File file = new File(path);
         Writer writer = new BufferedWriter(new FileWriter(file));
-        Logger.getGlobal().log(Level.WARNING, "FUll file path: " + file.getAbsolutePath());
+        Logger.getGlobal().log(Level.INFO, "Saving config to file: " + file.getAbsolutePath());
         mYaml.dump(configuration, writer);
     }
 }
